--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,15 @@ body, html {
 }
 
 .logo {
+    display: flex;
+    align-items: center;
+    width: 50%;
+
     font-size: 24px;
+}
+
+.logoFoto {
+    width: 110px;
 }
 
 .nav-links-desktop {
@@ -120,7 +128,16 @@ body, html {
     }
 
     .navbar {
-        justify-content: space-between;
+        justify-content: space-around;
+    }
+
+    .logo {
+        font-size: 18px;
+        width: auto;
+    }
+
+    .logoFoto {
+        width: 80px;
     }
 
 
@@ -131,4 +148,17 @@ body, html {
     .hamburguer {
         display: block;
     }
+}
+
+@media (max-width: 350px) {
+
+    .logo {
+        font-size: 18px;
+        width: auto;
+    }
+
+    .logoFoto {
+        width: 70px;
+    }
+
 }
