--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,22 @@ html {
     padding: 1.5rem;
 }
 
+.itens-cardapio .info .contador {
+    display: flex;
+    border: none;
+    background-color: rgb(221, 221, 221);
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.itens-cardapio .info .contador span {
+    margin: 0;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
 .itens-cardapio img {
 
     width: 100%;
@@ -308,7 +324,7 @@ html {
     font-size: 1.8rem;
     text-transform: uppercase;
     margin-bottom: 1rem;
-    text-decoration: underline;
+    
 }
 
 .itens-cardapio .info h4 {
@@ -318,21 +334,17 @@ html {
     justify-content: center;
     align-items: center;
     grid-template-columns: 150px 150px;
-    margin-left: 6rem;
+
 }
 
 .itens-cardapio .info span {
     font-size: 1.6rem;
     color: #585858;
     margin-left: 1.5rem;
-    text-decoration: underline;
+    
 }
 
-.contador {
-    display: flex;
-}
-
-.itens-cardapio div {
+.itens-cardapio .item {
     background-color: #5e5252;
     box-shadow: 0px 0px 4px 1px;
 }
@@ -348,9 +360,31 @@ html {
     transition: all 200ms ease-in;
 }
 
+.itens-cardapio .info .contador .conte {
+    font-size: 2rem;
+    color: #585858;
+    
+}
+
 .itens-cardapio .info .pedir:hover {
     background-color: #5e5252;
     color: white;
+}
+
+.btnPedir {
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: #Ffc506;
+    border-radius: 5px;
+    cursor: pointer;
+    color: black;
+    transition: all 200ms ease-in;
+}
+
+.btnPedir:hover {
+    background-color: #5e5252;
+    color: white;
+
 }
 
 
