--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,6 +412,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-size: 2rem;
 }
 
 .secaoContatos i {
@@ -423,6 +424,22 @@ html {
 
 .secaoContatos i:hover {
     color: #Ffc506;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    height: 25px;
+    color: white;
+    font-size: 1.4rem;
+}
+
+footer a {
+    text-decoration: underline;
+    color: white;
+
 }
 
 
