--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,11 +278,11 @@ html {
 }
 
 .itens-cardapio {
-    width: 80%;
+    width: 90%;
     margin-top: 2rem;
     margin-bottom: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 550px));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 350px));
     justify-content: center;
     align-items: center;
     gap: 30px;
@@ -301,6 +301,8 @@ html {
 .itens-cardapio .info .contador {
     display: flex;
     border: none;
+    width: 100%;
+    flex-wrap: nowrap;
     background-color: rgb(221, 221, 221);
     justify-content: center;
     align-items: center;
@@ -310,8 +312,6 @@ html {
 
 .itens-cardapio .info .contador span {
     margin: 0;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
 }
 
 .itens-cardapio img {
@@ -323,6 +323,7 @@ html {
 .itens-cardapio .info h3 {
     font-size: 1.8rem;
     text-transform: uppercase;
+    text-decoration: underline;
     margin-bottom: 1rem;
     
 }
@@ -333,7 +334,7 @@ html {
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-columns: 150px 150px;
+    grid-template-columns: 100px 100px;
 
 }
 
@@ -408,7 +409,7 @@ html {
 }
 
 .secaoContatos {
-    width: 450px;
+    width: 650px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -441,6 +442,7 @@ footer a {
     color: white;
 
 }
+
 
 
 
